--- a/views/contactus.html
+++ b/views/contactus.html
@@ -261,9 +261,10 @@
                     <label for="floatingTextarea"></label>
                     <textarea class="form-control mb-4" name="mensaje" cols="20" rows="6" placeholder="Deja aca tu mensaje..." id="floatingTextarea"></textarea>
 
-                    <input class="btnAccion" type="submit">
-                    <input class="btnAccion" type="reset">
-
+                    <div class="ctaInput">
+                        <a href="./error404.html" class="input">Enviar</a>
+                        <a href="./error404.html" class="input">Restablecer</a>
+                    </div>
                 </div>
             </article>
         </section>
@@ -289,7 +290,7 @@
                     <label for="email" class="inscribir">Inscribete a nuestra Newsletter</label>
                     <div class="accion">
                         <input id="email" placeholder="Email" type="email">
-                        <input class="btnAccion" type="submit">
+                        <a href="error404.html" class="btnAccion">Enviar</a>
                     </div>
                 </article>
             </section>
