--- a/views/services.html
+++ b/views/services.html
@@ -336,10 +336,11 @@
             <section class="footerMedium">
                 <article class="news">
                     <label for="email" class="inscribir">Inscribete a nuestra Newsletter</label>
-                    <div class="accion">
-                        <input id="email" placeholder="Email" type="email">
-                        <input class="btnAccion" type="submit">
-                    </div>
+                        <div class="accion">
+                            <input id="email" placeholder="Email" type="email">
+                            <a href="error404.html" class="btnAccion">Enviar</a>
+                        </div>
+                    </article>
                 </article>
             </section>
             <nav class="menu">
