--- a/views/testimonies.html
+++ b/views/testimonies.html
@@ -78,7 +78,7 @@
 
     <main class="contenedor">
 
-          <!-- Social Media -->
+        <!-- Social Media -->
 
         <section class="socialMediaUno" id="socialMediaUno">
             <a class="mt-1" href="https://es-la.facebook.com/" target="_blank" >
@@ -150,7 +150,7 @@
                                 <a href="https://twitter.com/" target="_blank">
                                     <img src="../img/twitter.svg" alt="Twitter" class="iconLink">
                                 </a>
-                                <a href="./error404.html" target="_blank">
+                                <a href="./error404.html">
                                     <img src="../img/compartir.svg" alt="Compartir" class="iconLink">
                                 </a>
                             </div>
@@ -192,7 +192,7 @@
                                 <a href="https://twitter.com/" target="_blank">
                                     <img src="../img/twitter.svg" alt="Twitter" class="iconLink">
                                 </a>
-                                <a href="./error404.html" target="_blank">
+                                <a href="./error404.html">
                                     <img src="../img/compartir.svg" alt="Compartir" class="iconLink">
                                 </a>
                             </div>
@@ -229,7 +229,7 @@
                                 <a href="https://twitter.com/" target="_blank">
                                     <img src="../img/twitter.svg" alt="Twitter" class="iconLink">
                                 </a>
-                                <a href="./error404.html" target="_blank">
+                                <a href="./error404.html">
                                     <img src="../img/compartir.svg" alt="Compartir" class="iconLink">
                                 </a>
                             </div>
@@ -268,7 +268,7 @@
                                 <a href="https://twitter.com/" target="_blank">
                                     <img src="../img/twitter.svg" alt="Twitter" class="iconLink">
                                 </a>
-                                <a href="./error404.html" target="_blank">
+                                <a href="./error404.html">
                                     <img src="../img/compartir.svg" alt="Compartir" class="iconLink">
                                 </a>
                             </div>
@@ -306,7 +306,7 @@
                                 <a href="https://twitter.com/" target="_blank">
                                     <img src="../img/twitter.svg" alt="Twitter" class="iconLink">
                                 </a>
-                                <a href="./error404.html" target="_blank">
+                                <a href="./error404.html">
                                     <img src="../img/compartir.svg" alt="Compartir" class="iconLink">
                                 </a>
                             </div>
@@ -342,7 +342,7 @@
                                 <a href="https://twitter.com/" target="_blank">
                                     <img src="../img/twitter.svg" alt="Twitter" class="iconLink">
                                 </a>
-                                <a href="./error404.html" target="_blank">
+                                <a href="./error404.html">
                                     <img src="../img/compartir.svg" alt="Compartir" class="iconLink">
                                 </a>
                             </div>
@@ -383,7 +383,7 @@
                                 <a href="https://twitter.com/" target="_blank">
                                     <img src="../img/twitter.svg" alt="Twitter" class="iconLink">
                                 </a>
-                                <a href="./error404.html" target="_blank">
+                                <a href="./error404.html">
                                     <img src="../img/compartir.svg" alt="Compartir" class="iconLink">
                                 </a>
                             </div>
@@ -417,7 +417,7 @@
                                 <a href="https://twitter.com/" target="_blank">
                                     <img src="../img/twitter.svg" alt="Twitter" class="iconLink">
                                 </a>
-                                <a href="./error404.html" target="_blank">
+                                <a href="./error404.html">
                                     <img src="../img/compartir.svg" alt="Compartir" class="iconLink">
                                 </a>
                             </div>
@@ -452,7 +452,7 @@
                             <a href="https://twitter.com/" target="_blank">
                                 <img src="../img/twitter.svg" alt="Twitter" class="iconLink">
                             </a>
-                            <a href="./error404.html" target="_blank">
+                            <a href="./error404.html">
                                 <img src="../img/compartir.svg" alt="Compartir" class="iconLink">
                             </a>
                         </div>
@@ -489,7 +489,7 @@
                             <a href="https://twitter.com/" target="_blank">
                                 <img src="../img/twitter.svg" alt="Twitter" class="iconLink">
                             </a>
-                            <a href="./error404.html" target="_blank">
+                            <a href="./error404.html">
                                 <img src="../img/compartir.svg" alt="Compartir" class="iconLink">
                             </a>
                         </div>
@@ -524,7 +524,7 @@
                             <a href="https://twitter.com/" target="_blank">
                                 <img src="../img/twitter.svg" alt="Twitter" class="iconLink">
                             </a>
-                            <a href="./error404.html" target="_blank">
+                            <a href="./error404.html">
                                 <img src="../img/compartir.svg" alt="Compartir" class="iconLink">
                             </a>
                         </div>
@@ -560,7 +560,7 @@
                             <a href="https://twitter.com/" target="_blank">
                                 <img src="../img/twitter.svg" alt="Twitter" class="iconLink">
                             </a>
-                            <a href="./error404.html" target="_blank">
+                            <a href="./error404.html">
                                 <img src="../img/compartir.svg" alt="Compartir" class="iconLink">
                             </a>
                         </div>
@@ -598,7 +598,7 @@
                             <a href="https://twitter.com/" target="_blank">
                                 <img src="../img/twitter.svg" alt="Twitter" class="iconLink">
                             </a>
-                            <a href="./error404.html" target="_blank">
+                            <a href="./error404.html">
                                 <img src="../img/compartir.svg" alt="Compartir" class="iconLink">
                             </a>
                         </div>
@@ -636,7 +636,7 @@
                             <a href="https://twitter.com/" target="_blank">
                                 <img src="../img/twitter.svg" alt="Twitter" class="iconLink">
                             </a>
-                            <a href="./error404.html" target="_blank">
+                            <a href="./error404.html">
                                 <img src="../img/compartir.svg" alt="Compartir" class="iconLink">
                             </a>
                         </div>
@@ -677,7 +677,7 @@
                             <a href="https://twitter.com/" target="_blank">
                                 <img src="../img/twitter.svg" alt="Twitter" class="iconLink">
                             </a>
-                            <a href="./error404.html" target="_blank">
+                            <a href="./error404.html">
                                 <img src="../img/compartir.svg" alt="Compartir" class="iconLink">
                             </a>
                         </div>
@@ -717,7 +717,7 @@
                                 <a href="https://twitter.com/" target="_blank">
                                     <img src="../img/twitter.svg" alt="Twitter" class="iconLink">
                                 </a>
-                                <a href="./error404.html" target="_blank">
+                                <a href="./error404.html">
                                     <img src="../img/compartir.svg" alt="Compartir" class="iconLink">
                                 </a>
                             </div>
@@ -754,7 +754,7 @@
                                 <a href="https://twitter.com/" target="_blank">
                                     <img src="../img/twitter.svg" alt="Twitter" class="iconLink">
                                 </a>
-                                <a href="./error404.html" target="_blank">
+                                <a href="./error404.html">
                                     <img src="../img/compartir.svg" alt="Compartir" class="iconLink">
                                 </a>
                             </div>
@@ -792,7 +792,7 @@
                                 <a href="https://twitter.com/" target="_blank">
                                     <img src="../img/twitter.svg" alt="Twitter" class="iconLink">
                                 </a>
-                                <a href="./error404.html" target="_blank">
+                                <a href="./error404.html">
                                     <img src="../img/compartir.svg" alt="Compartir" class="iconLink">
                                 </a>
                             </div>
@@ -834,7 +834,7 @@
                                 <a href="https://twitter.com/" target="_blank">
                                     <img src="../img/twitter.svg" alt="Twitter" class="iconLink">
                                 </a>
-                                <a href="./error404.html" target="_blank">
+                                <a href="./error404.html">
                                     <img src="../img/compartir.svg" alt="Compartir" class="iconLink">
                                 </a>
                             </div>
@@ -872,7 +872,7 @@
                                 <a href="https://twitter.com/" target="_blank">
                                     <img src="../img/twitter.svg" alt="Twitter" class="iconLink">
                                 </a>
-                                <a href="./error404.html" target="_blank">
+                                <a href="./error404.html">
                                     <img src="../img/compartir.svg" alt="Compartir" class="iconLink">
                                 </a>
                             </div>
@@ -902,7 +902,7 @@
                     <label for="email" class="inscribir">Inscribete a nuestra Newsletter</label>
                     <div class="accion">
                         <input id="email" placeholder="Email" type="email">
-                        <input class="btnAccion" type="submit">
+                        <a href="error404.html" class="btnAccion">Enviar</a>
                     </div>
                 </article>
             </section>
