--- a/scss/_form.scss
+++ b/scss/_form.scss
@@ -44,38 +44,48 @@
                 width:$widthTotal;
                 padding:15px;
                 border-radius: 50px;
-                font-size:  $smallTitle;
+                font-size: $smallTitle;
                 font-weight: $boldMedium;
                 border: 1px solid transparent;
                 background-color: $backgroundColor;
                 box-shadow: 0 0 10px 2px $shadowColor;
-                color:  $tertiaryColor;
+                color: $tertiaryColor;
             }
             textarea{
                 border-radius: 10px;
             }
-            .btnAccion{
-                width: 46%;
-                display:inline;
-                cursor: pointer;
-                background-color: $primaryColor;
-                border:1px solid  $primaryColor;
-                border-radius: $ctoBorderRadius;
-                font-family: $mainFont;
-                font-weight: $bold;
-                font-size:$regularText;
-                color:  $whiteColor;
-                margin: 0px 5px;
-                padding: $paddingCto;
-                text-align: center;
-                font-family: $mainFont;
-                transition: all 0.3s ease-in-out;
-                &:hover{
-                    background-color: $hoverColor;
-                    border:1px solid  $hoverColor;
-                    color:  $primaryColor;
-                    box-shadow: 0 0 10px  $primaryColor;
-                    text-shadow: 0 0 10px  $primaryColor;
+            .ctaInput{
+                display: flex;
+                flex-direction: row;
+                flex-wrap: nowrap;
+                justify-content: center;
+                align-items: center;
+                .input{
+                    width:100%;
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: center;
+                    align-items: center;
+                    margin: 10px 5px;
+                    cursor: pointer;
+                    background-color: $primaryColor;
+                    border:1px solid  $primaryColor;
+                    border-radius: $ctoBorderRadius;
+                    font-family: $mainFont;
+                    font-weight: $bold;
+                    font-size:$regularText;
+                    color:  $whiteColor;
+                    text-decoration: none;
+                    padding: $paddingCto;
+                    font-family: $mainFont;
+                    transition: all 0.3s ease-in-out;
+                    &:hover{
+                        background-color: $hoverColor;
+                        border:1px solid  $hoverColor;
+                        color:  $primaryColor;
+                        box-shadow: 0 0 10px  $primaryColor;
+                        text-shadow: 0 0 10px  $primaryColor;
+                    }
                 }
             }
         }
