--- a/scss/_media_landing.scss
+++ b/scss/_media_landing.scss
@@ -317,7 +317,7 @@
         justify-content: center;
         align-items: center;
         .mainFooter{
-            width:50%;
+            width:60%;
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -333,21 +333,20 @@
             }
             .footerMedium{
                 .news{
-                    width:auto;
+                    width:100%;
                     .inscribir{
                         text-align: left;
                     }
                     .accion{
-                        width:$widthTotal;
+                        width:250px;
                         display: flex;
                         flex-direction: column;
                         justify-content: center;
-                        align-items: center;
-                        input{
-                            margin: 10px -5px;
-                        }
-                        .btnAccion{
+                        row-gap: 15px;
+                        margin: 20px 0px;
+                        .btnAccion, input{
                             width:100%;
+                            margin: 0px;
                         }
                     }
                 }
