--- a/views/testimonies.html
+++ b/views/testimonies.html
@@ -134,7 +134,7 @@
                             </p>
                         </article>
                         <article class="opinionBottom">
-                            <img src="../img/user1.svg" alt="Usuario" class="user">
+                            <img src="../img/user1.svg" alt="testimonio de Usuario" class="user">
                             <div class="data">
                                 <p>Sofia C.</p>
                                 <p>Dis. UX/UI</p>
@@ -176,7 +176,7 @@
                             </p>
                         </article>
                         <article class="opinionBottom">
-                            <img src="../img/user2.svg" alt="Usuario" class="user">
+                            <img src="../img/user2.svg" alt="testimonio de Usuario" class="user">
                             <div class="data">
                                 <p>Erika B.</p>
                                 <p>Des. Fullstack</p>
@@ -213,7 +213,7 @@
                             </p>
                         </article>
                         <article class="opinionBottom">
-                            <img src="../img/user3.svg" alt="Usuario" class="user">
+                            <img src="../img/user3.svg" alt="testimonio de Usuario" class="user">
                             <div class="data">
                                 <p>Samanta N.</p>
                                 <p>Dis. UX/UI</p>
@@ -252,7 +252,7 @@
                             </p>
                         </article>
                         <article class="opinionBottom">
-                            <img src="../img/user4.svg" alt="Usuario" class="user">
+                            <img src="../img/user4.svg" alt="testimonio de Usuario" class="user">
                             <div class="data">
                                 <p>Carlos E.</p>
                                 <p>Des. Fullstack</p>
@@ -290,7 +290,7 @@
                             </p>
                         </article>
                         <article class="opinionBottom">
-                            <img src="../img/user5.svg" alt="Usuario" class="user">
+                            <img src="../img/user5.svg" alt="testimonio de Usuario" class="user">
                             <div class="data">
                                 <p>Maria C.</p>
                                 <p>Des. Fullstack</p>
@@ -326,7 +326,7 @@
                             </p>
                         </article>
                         <article class="opinionBottom">
-                            <img src="../img/user6.svg" alt="Usuario" class="user">
+                            <img src="../img/user6.svg" alt="testimonio de Usuario" class="user">
                             <div class="data">
                                 <p>Esteban F.</p>
                                 <p>Dis. UX/UI</p>
@@ -367,7 +367,7 @@
                             </p>
                         </article>
                         <article class="opinionBottom">
-                            <img src="../img/user7.svg" alt="Usuario" class="user">
+                            <img src="../img/user7.svg" alt="testimonio de Usuario" class="user">
                             <div class="data">
                                 <p>Alex V.</p>
                                 <p>Dis. UX/UI</p>
@@ -401,7 +401,7 @@
                             </p>
                         </article>
                         <article class="opinionBottom">
-                            <img src="../img/user8.svg" alt="Usuario" class="user">
+                            <img src="../img/user8.svg" alt="testimonio de Usuario" class="user">
                             <div class="data">
                                 <p>Arnold O.</p>
                                 <p>Dis. UI</p>
@@ -436,7 +436,7 @@
                         </p>
                     </article>
                     <article class="opinionBottom">
-                        <img src="../img/user9.svg" alt="Usuario" class="user">
+                        <img src="../img/user9.svg" alt="testimonio de Usuario" class="user">
                         <div class="data">
                             <p>Esteban M.</p>
                             <p>Des. Fullstack</p>
@@ -473,7 +473,7 @@
                         </p>
                     </article>
                     <article class="opinionBottom">
-                        <img src="../img/user10.svg" alt="Usuario" class="user">
+                        <img src="../img/user10.svg" alt="testimonio de Usuario" class="user">
                         <div class="data">
                             <p>Kevin A.</p>
                             <p>Dis. UX</p>
@@ -508,7 +508,7 @@
                         </p>
                     </article>
                     <article class="opinionBottom">
-                        <img src="../img/user11.svg" alt="Usuario" class="user">
+                        <img src="../img/user11.svg" alt="testimonio de Usuario" class="user">
                         <div class="data">
                             <p>Tamara G.</p>
                             <p>Des. Fullstack</p>
@@ -544,7 +544,7 @@
                         </p>
                     </article>
                     <article class="opinionBottom">
-                        <img src="../img/user12.svg" alt="Usuario" class="user">
+                        <img src="../img/user12.svg" alt="testimonio de Usuario" class="user">
                         <div class="data">
                             <p>Carolina G.</p>
                             <p>Dis. UX/UI</p>
@@ -582,7 +582,7 @@
                         </p>
                     </article>
                     <article class="opinionBottom">
-                        <img src="../img/user13.svg" alt="Usuario" class="user">
+                        <img src="../img/user13.svg" alt="testimonio de Usuario" class="user">
                         <div class="data">
                             <p>Juan L.</p>
                             <p>Des. Fullstack</p>
@@ -620,7 +620,7 @@
                         </p>
                     </article>
                     <article class="opinionBottom">
-                        <img src="../img/user14.svg" alt="Usuario" class="user">
+                        <img src="../img/user14.svg" alt="testimonio de Usuario" class="user">
                         <div class="data">
                             <p>Edwin L.</p>
                             <p>Dis. UX/UI</p>
@@ -661,7 +661,7 @@
                         </p>
                     </article>
                     <article class="opinionBottom">
-                        <img src="../img/user15.svg" alt="Usuario" class="user">
+                        <img src="../img/user15.svg" alt="testimonio de Usuario" class="user">
                         <div class="data">
                             <p>Hyroshi C.</p>
                             <p>Dis. UX/UI</p>
@@ -701,7 +701,7 @@
                             </p>
                         </article>
                         <article class="opinionBottom">
-                            <img src="../img/user16.svg" alt="Usuario" class="user">
+                            <img src="../img/user16.svg" alt="testimonio de Usuario" class="user">
                             <div class="data">
                                 <p>Carlos C.</p>
                                 <p>Dis. UX/UI</p>
@@ -738,7 +738,7 @@
                             </p>
                         </article>
                         <article class="opinionBottom">
-                            <img src="../img/user17.svg" alt="Usuario" class="user">
+                            <img src="../img/user17.svg" alt="testimonio de Usuario" class="user">
                             <div class="data">
                                 <p>Daniela O.</p>
                                 <p>Des. Backend</p>
@@ -776,7 +776,7 @@
                             </p>
                         </article>
                         <article class="opinionBottom">
-                            <img src="../img/user18.svg" alt="Usuario" class="user">
+                            <img src="../img/user18.svg" alt="testimonio de Usuario" class="user">
                             <div class="data">
                                 <p>Alexa R.</p>
                                 <p>Dis. UX/UI</p>
@@ -818,7 +818,7 @@
                             </p>
                         </article>
                         <article class="opinionBottom">
-                            <img src="../img/user19.svg" alt="Usuario" class="user">
+                            <img src="../img/user19.svg" alt="testimonio de Usuario" class="user">
                             <div class="data">
                                 <p>Daniella C.</p>
                                 <p>Des. Backend</p>
@@ -856,7 +856,7 @@
                             </p>
                         </article>
                         <article class="opinionBottom">
-                            <img src="../img/user20.svg" alt="Usuario" class="user">
+                            <img src="../img/user20.svg" alt="testimonio de Usuario" class="user">
                             <div class="data">
                                 <p>Erika A.</p>
                                 <p>Des. Frontend</p>
