Updating Testimony title

--- a/scss/_media_landing.scss
+++ b/scss/_media_landing.scss
@@ -549,6 +549,12 @@
                 }
             }
         }
+        .containerTestimony{
+            .subtitulo{
+                font-size: $breakTitle;
+                font-weight: $bold;
+            }
+        }
         .patrocinadores{
             max-width:$breakPointMax;
             margin:$sectionMargin;
